@@ -1,0 +1,14 @@
+#!/bin/sh
+# This would fail for grep-2.5.3
+: ${srcdir=.}
+. "$srcdir/init.sh"; path_prepend_ ../src
+
+printf 'Y\n'      > exp || framework_failure
+fail=0
+
+for LOC in en_US.UTF-8 zh_CN $LOCALE_FR_UTF8; do
+  printf 'X\nY\nZ\n' | LC_ALL=$LOC grep -i '[y]' > out || fail=1
+  compare out exp || fail=1
+done
+
+Exit $fail
